--- a/docker/Dockerfile.ci_cpu
+++ b/docker/Dockerfile.ci_cpu
@@ -134,3 +134,5 @@ RUN bash /install/ubuntu_install_cmake_source.sh
 # Install swiftshader
 COPY install/ubuntu_install_swiftshader.sh /install/ubuntu_install_swiftshader.sh
 RUN bash /install/ubuntu_install_swiftshader.sh
+COPY install/ubuntu_install_vulkan.sh /install/ubuntu_install_vulkan.sh
+RUN bash /install/ubuntu_install_vulkan.sh
